2019-1/231/users/4216/executions/1796_1597.log
== TEST (2019-05-30 18:12:53) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))

i = 0 

print(size(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:52) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):

print(soma)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:10) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = 0,5*soma
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:12) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = 0.5*soma
total = 
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
File "XXXX", line 5
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:16) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = 0.5*soma
total = x
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:24) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = 0.5*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:39) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = 0.05*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:58) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:27) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(soma)
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:40) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(soma)
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:50) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

#while(i<size(n)):
#	if(n[i]>=80):
print(soma)
print(desconto)		


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:33) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma = soma + desconto
	i = i + 0
print(round(soma, 2))	


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:20:38) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma = soma + desconto
	i = i + 0
print(round(soma, 2))	


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:12) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma = soma + desconto
	i = i + 0
print(round(soma, 2))	


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:36) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma = soma + desconto
	i = i + 0
	print(round(soma, 2))	


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:28) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		total = soma + desconto
	i = i + 0
print(soma, 2)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:54) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		total = soma + desconto
	i = i + 1
print(soma, 2)


		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:31) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		total = soma + desconto
	i = i + 1
print(round(total, 2))



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:29:02) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 2
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma = soma + desconto
	i = i + 0
	print(round(soma, 2))	


		
	
-- EXECUTION TIME:
380.554
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:45) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		total = total + soma + desconto
	i = i + 1
print(round(total, 2))



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:30:15) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		total = total + soma + desconto
	i = i + 1
print(i)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:34) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma + desconto
	i = i + 1
print(i)
print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:00) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:33:07) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- EXECUTION TIME:
0.407334
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:59) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:34:26) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- EXECUTION TIME:
0.380368
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:31) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:19) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:19) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:20) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:20) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:20) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:57) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
total = 0
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:08) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:36:09) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(soma)



		
	
-- EXECUTION TIME:
0.397663
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
insira os valores: 26
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:45) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(round(soma, 2))



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:36:47) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(round(soma, 2))



		
	
-- EXECUTION TIME:
0.401023
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:47) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(round(soma, 2))



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:39:20) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(round(soma, 2))



		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:39:42) 
-- CODE:
from numpy import*
n = array(eval(input("insira os valores: ")))
soma = sum(n)
desconto = (5/100)*soma
i = 0 

while(i<size(n)):
	if(n[i]>=80):
		soma =  soma - desconto
	i = i + 1

print(round(soma, 2))



		
	
-- EXECUTION TIME:
0.341683
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
